<resources>
    <string name="app_name">MyKuya</string>

    <string name="common_error">Something went wrong</string>

    <string name="menu_bottom_home">Home</string>
    <string name="menu_bottom_my_job">MyJobs</string>
    <string name="menu_bottom_support">Support</string>
    <string name="menu_bottom_news">News</string>
    <string name="menu_bottom_account">Account</string>

    <string name="hello_blank_fragment">Coming soon</string>

    <string name="txt_loading">Loading…</string>

    <string name="lbl_featured">Featured</string>
    <string name="lbl_what_is_new">What\'s news</string>
    <string name="lbl_learn_more">Learn more</string>
    <string name="lbl_good_afternoon"><![CDATA[Good afternoon, <b>Payman!</b>]]></string>

    <string name="btn_confirm">Confirm</string>


    <string name="msg_error_address_null">Please choose your address!</string>
</resources>