<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/iv_header_background"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_home_header_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_featured"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/padding_s"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:cardCornerRadius="@dimen/common_conner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_my_location">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/tv_featured_label"
                    style="@style/AppDesign.TextViewNormalBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_featured"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/v_featured_line"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_vertical_line"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@color/grayLight"
                    app:layout_constraintTop_toBottomOf="@+id/tv_featured_label" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_featured"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"
                    android:orientation="vertical"
                    android:scrollbars="none"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/v_featured_line"
                    app:spanCount="3"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_category" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_hello"
            style="@style/AppDesign.TextViewNormalBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_big"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:padding="@dimen/padding_s"
            android:text="@string/lbl_good_afternoon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_my_location"
            style="@style/AppDesign.TextViewNormalBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_big"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/bg_transparent_white_corner"
            android:drawablePadding="@dimen/padding_in_box_content"
            android:paddingStart="@dimen/padding_in_box_content"
            android:paddingTop="@dimen/padding_s"
            android:paddingEnd="@dimen/padding_in_box_content"
            android:paddingBottom="@dimen/padding_s"
            android:text="Tehran"
            app:drawableStartCompat="@drawable/ic_location_pin_12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_hello" />

        <!--Features-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_features"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            android:orientation="vertical"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/cv_featured"
            app:spanCount="3"
            tools:itemCount="6"
            tools:listitem="@layout/item_category" />

        <ImageView
            android:id="@+id/iv_close_expanded_feature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="@dimen/activity_vertical_margin"
            android:rotation="-90"
            android:scaleType="centerInside"
            android:src="@drawable/ic_baseline_arrow_black_ios_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_features" />

        <View
            android:id="@+id/v_featured_bottom_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_vertical_line"
            android:background="@color/grayLight"
            app:layout_constraintTop_toBottomOf="@+id/iv_close_expanded_feature" />

        <View
            android:id="@+id/v_what_new_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_vertical_line"
            android:layout_marginTop="4dp"
            android:background="@color/grayLight"
            app:layout_constraintTop_toBottomOf="@+id/v_featured_bottom_line" />

        <!--what new-->
        <TextView
            android:id="@+id/tv_label_what_new"
            style="@style/AppDesign.TextViewNormalBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:text="@string/lbl_what_is_new"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v_what_new_line" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_what_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingStart="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/padding_in_box_content"
            android:paddingBottom="@dimen/padding_in_box_content"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_what_new"
            tools:itemCount="3"
            tools:listitem="@layout/item_what_is_new" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>